--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "movie-app",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": "14.15.4",
+    "npm": "6.14.10"
+  },
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
